# sketchup-claude-code

./: .gitignore  .markdownlint-cli2.yaml  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGNER_GUIDE.md  DESIGNER_MANUAL.md  DEVELOPMENT.md  INSTALLATION.md  LICENSE  PHASE2_VERIFICATION.md  PHASE3_IMPLEMENTATION.md  QUICKSTART.md  README.md  README.zh-CN.md  Readme_For_Wife.md  marketplace.json  plugin.json  setup.sh
mcp_server/: hatch_build.py  pyproject.toml  start.sh
mcp_server/assets/: library.json
mcp_server/mcp_server/: __init__.py  bridge_install.py  cli.py  doctor.py  project_assets.py  project_init.py  project_layout.py  project_state.py  project_versions.py  release_check.py  runtime_skills.py  server.py  smoke.py
mcp_server/mcp_server/assets/: default_design_rules.json  library.json
mcp_server/mcp_server/bridge/: __init__.py  socket_bridge.py
mcp_server/mcp_server/protocol/: __init__.py  jsonrpc.py  rollback.py  spatial.py
mcp_server/mcp_server/resources/: __init__.py  asset_lock_schema.py  component_manifest_schema.py  design_model_resource.py  design_model_schema.py  design_rules_schema.py  entity_resource.py  import_manifest_schema.py  model_resource.py  project_files.py  snapshot_manifest_schema.py
mcp_server/mcp_server/tools/: bathroom_planner.py  export_tools.py  import_pipeline.py  local_library_search.py  model_tools.py  placement_tools.py  project_executor.py  query_tools.py  (+5 more)
mcp_server/tests/: test_asset_lock_schema.py  test_bathroom_mcp_tool.py  test_bathroom_planner.py  test_bridge_install.py  test_bridge_launch_mcp_tool.py  test_command_dispatcher.py  test_component_instance_mcp_tool.py  test_component_manifest_schema.py  test_component_registry_mcp_tool.py  test_design_model_resource.py  test_design_model_schema.py  test_design_rules_mcp_tool.py  test_design_rules_schema.py  test_doctor.py  test_export_tools.py  test_import_manifest_schema.py  test_import_mcp_tool.py  test_import_pipeline.py  test_integration.py  test_local_library_search.py  test_placement_tools.py  test_project_assets.py  test_project_executor.py  test_project_files.py  test_project_init.py  test_project_layout.py  test_project_space_mcp_tool.py  test_project_state_mcp_tool.py  test_project_versions.py  test_release_check.py  test_report_tools.py  test_runtime_skills.py  test_runtime_startup.py  test_smoke.py  test_snapshot_manifest_schema.py  test_snapshot_mcp_tool.py  test_socket_bridge.py  test_trace_executor.py  test_warehouse_tool.py
(+102 files in other folders)
