[project]
name = "sketchup-agent-harness-mcp"
version = "0.1.0"
description = "MCP server for SketchUp Agent Harness"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
sketchup-agent = "mcp_server.cli:main"
sketchup-agent-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"../su_bridge/lib" = "mcp_server/packaged/su_bridge/lib"

[tool.hatch.build.targets.sdist.force-include]
"../su_bridge/lib" = "mcp_server/packaged/su_bridge/lib"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live SketchUp Ruby bridge",
]
